[package]
name = "safe-builder-derive"
version = "0.1.1"
authors = ["Matthew Maclean"]
description = "Derive a safe builder pattern"
readme = "README.md"
repository = "https://github.com/Matthew-Maclean/safe-builder-derive"
keywords = ["proc-macro", "builder", "derive"]
license = "MIT"
license-file = "LICENCE"

[dependencies]
quote = "0.3.15"
syn = "0.11.10"
itertools = "0.6.0"

[lib]
proc-macro = true